@@ -1,3 +1,6 @@
+* Thu Dec 01 2016 Nick Markowski <nmarkowski@keywcorp.com> - 5.0.1-0
+- Removed pupmod-simp-sysctl in favor of augeas-sysctl
+
 * Wed Nov 23 2016 Jeanne Greulich <jgreulich.simp@onyxpoint.com> - 5.0.0-0
 - update requirement versions
 
